fix index.yaml.template with common types
